crates/musa-render/tests/suite/snapshots/suite__musicxml__annotated.snap
---
source: crates/musa-render/tests/musicxml.rs
expression: musicxml_of(source)
---
<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<!DOCTYPE score-partwise PUBLIC "-//Recordare//DTD MusicXML 4.0 Partwise//EN" "http://www.musicxml.org/dtds/partwise.dtd">
<score-partwise version="4.0">
  <work>
    <work-title>Annotated</work-title>
  </work>
  <identification>
    <encoding>
      <software>musa</software>
    </encoding>
  </identification>
  <part-list>
    <score-part id="P1">
      <part-name>piano</part-name>
    </score-part>
  </part-list>
  <part id="P1">
    <measure number="1">
      <attributes>
        <divisions>1</divisions>
        <key>
          <fifths>0</fifths>
          <mode>minor</mode>
        </key>
        <time>
          <beats>4</beats>
          <beat-type>4</beat-type>
        </time>
        <clef>
          <sign>G</sign>
          <line>2</line>
        </clef>
      </attributes>
      <direction placement="above">
        <direction-type>
          <metronome>
            <beat-unit>quarter</beat-unit>
            <per-minute>96</per-minute>
          </metronome>
        </direction-type>
        <sound tempo="96"/>
      </direction>
      <direction placement="above">
        <direction-type>
          <rehearsal>Exposition</rehearsal>
        </direction-type>
      </direction>
      <harmony>
        <root>
          <root-step>A</root-step>
          <root-alter>0</root-alter>
        </root>
        <kind text="am">minor</kind>
      </harmony>
      <direction placement="above">
        <direction-type>
          <words>antecedent</words>
        </direction-type>
        <direction-type>
          <bracket type="start" number="1" line-end="down"/>
        </direction-type>
      </direction>
      <note>
        <pitch>
          <step>A</step>
          <octave>4</octave>
        </pitch>
        <duration>1</duration>
        <voice>1</voice>
        <type>quarter</type>
      </note>
      <note>
        <pitch>
          <step>C</step>
          <octave>5</octave>
        </pitch>
        <duration>1</duration>
        <voice>1</voice>
        <type>quarter</type>
      </note>
      <note>
        <pitch>
          <step>E</step>
          <octave>5</octave>
        </pitch>
        <duration>2</duration>
        <voice>1</voice>
        <type>half</type>
      </note>
    </measure>
    <measure number="2">
      <harmony>
        <root>
          <root-step>F</root-step>
          <root-alter>0</root-alter>
        </root>
        <kind text="fmaj7">major-seventh</kind>
      </harmony>
      <note>
        <pitch>
          <step>F</step>
          <octave>5</octave>
        </pitch>
        <duration>2</duration>
        <voice>1</voice>
        <type>half</type>
      </note>
      <note>
        <pitch>
          <step>E</step>
          <octave>5</octave>
        </pitch>
        <duration>2</duration>
        <voice>1</voice>
        <type>half</type>
      </note>
      <direction placement="above">
        <direction-type>
        </direction-type>
        <direction-type>
          <bracket type="stop" number="1" line-end="down"/>
        </direction-type>
      </direction>
    </measure>
    <measure number="3">
      <direction placement="above">
        <direction-type>
          <rehearsal>Development</rehearsal>
        </direction-type>
      </direction>
      <harmony>
        <root>
          <root-step>E</root-step>
          <root-alter>0</root-alter>
        </root>
        <kind text="e7">dominant</kind>
      </harmony>
      <direction placement="above">
        <direction-type>
          <words>consequent</words>
        </direction-type>
        <direction-type>
          <bracket type="start" number="1" line-end="down"/>
        </direction-type>
      </direction>
      <note>
        <pitch>
          <step>B</step>
          <octave>4</octave>
        </pitch>
        <duration>1</duration>
        <voice>1</voice>
        <type>quarter</type>
      </note>
      <note>
        <pitch>
          <step>E</step>
          <octave>5</octave>
        </pitch>
        <duration>1</duration>
        <voice>1</voice>
        <type>quarter</type>
      </note>
      <note>
        <pitch>
          <step>G</step>
          <alter>1</alter>
          <octave>5</octave>
        </pitch>
        <duration>2</duration>
        <voice>1</voice>
        <type>half</type>
      </note>
    </measure>
    <measure number="4">
      <harmony>
        <root>
          <root-step>A</root-step>
          <root-alter>0</root-alter>
        </root>
        <kind text="am">minor</kind>
      </harmony>
      <note>
        <pitch>
          <step>A</step>
          <octave>5</octave>
        </pitch>
        <duration>4</duration>
        <voice>1</voice>
        <type>whole</type>
      </note>
      <direction placement="above">
        <direction-type>
        </direction-type>
        <direction-type>
          <bracket type="stop" number="1" line-end="down"/>
        </direction-type>
      </direction>
    </measure>
  </part>
</score-partwise>
